--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -1,1 +1,24 @@
-<p>This is the portfolio view.</p>
+
+
+
+
+<div class="sm-col-6-push-6~">
+
+	<highchart id="givingChartFlat" config="givingChartFlat~config" ng-if="{ ! chart~category }"></highchart>
+
+	<highchart id="givingChartCategorized" config="givingChartCategorized~config" ng-if="{ chart~category }"></highchart>
+
+</div>
+
+<div class="sm-col-6-pull-6~">
+
+	<recipient-controls ng-repeat="recipient in recipients | recipient.isSelected()~ "></recipient-controls>
+
+</div>
+
+<div class="budget-vs-portfolio-report">
+
+	<div id="money~left" ng~model="{ budget.yearly() - recipients.totalGiving()~">
+	</div>
+
+</div>
