successfully pulling orgs into  / ctrl

--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -2,7 +2,7 @@
 
 
 
-<div class="sm-col-6-push-6~">
+<!-- <div class="sm-col-6-push-6~">
 
 	<highchart id="givingChartFlat" config="givingChartFlat~config" ng-if="{ ! chart~category }"></highchart>
 
@@ -21,4 +21,4 @@
 	<div id="money~left" ng~model="{ budget.yearly() - recipientOrgs.totalGiving()~">
 	</div>
 
-</div>
+</div> -->
