--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -35,23 +35,31 @@
 					<div class="col-xs-8">
 						<sp/>
 						<div class="btn-group">
-							<button class="decrease btn btn-sm"
+							<button class="decrease btn btn-sm btn-warning"
+								
 								ng-click="orgs.incrementOrgPortion(orgs.selectedOrg, -5)">
-								<span></span>
-								<span></span>
+
+								<span class="glyphicon glyphicon-minus"></span>
+								<span class="glyphicon glyphicon-minus"></span>
 							</button>
-							<button class="decrease btn btn-sm"
+							<button class="decrease btn btn-sm btn-warning"
+								
 								ng-click="orgs.incrementOrgPortion(orgs.selectedOrg, -1)">
-								<span></span>
+
+								<span class="glyphicon glyphicon-minus"></span>
 							</button>
-							<button class="increase btn btn-sm"
+							<button class="increase btn btn-sm btn-success"
+
 								ng-click="orgs.incrementOrgPortion(orgs.selectedOrg, 1)">
-								<span></span>
+
+								<span class="glyphicon glyphicon-plus"></span>
 							</button>
-							<button class="increase btn btn-sm"
+							<button class="increase btn btn-sm btn-success"
+
 								ng-click="orgs.incrementOrgPortion(orgs.selectedOrg, 5)">
-								<span></span>
-								<span></span>
+								
+								<span class="glyphicon glyphicon-plus"></span>
+								<span class="glyphicon glyphicon-plus"></span>
 							</button>
 						</div><!-- .btn-group -->
 					</div>						
