working toward color-picking

--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -22,6 +22,10 @@
 				</div>
 				<sp/>
 				<div class="row">
+					<input colorpicker="hex" type="text" ng-model="orgs.selectedOrg.color" />
+				</div>
+				<sp/>
+				<div class="row">
 					<div class="col-xs-12 text-left">
 						Parts/portions of total giving:
 					</div>
