--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -22,7 +22,7 @@
 				</div>
 				<sp/>
 				<div class="row">
-					<input colorpicker="hex" type="text" ng-model="orgs.selectedOrg.color" />
+					<spectrum-colorpicker ng-model="orgs.selectedOrg.color"></spectrum-colorpicker>
 				</div>
 				<sp/>
 				<div class="row">
