switched to hex colors, fixed piechart

--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -22,7 +22,7 @@
 				</div>
 				<sp/>
 				<div class="row">
-					<spectrum-colorpicker ng-model="orgs.selectedOrg.color"></spectrum-colorpicker>
+					<spectrum-colorpicker ng-model="orgs.selectedOrg.color" format="'hex'"></spectrum-colorpicker>
 				</div>
 				<sp/>
 				<div class="row">
