--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -11,7 +11,7 @@
 		<div class="panel-body">	
 			<div id="org-editor" ng-if="orgs.selectedOrg">
 				<div class="row">
-					<div class="col-xs-12">
+					<div class="col-xs-10">
 						Organization:
 						<sp/>
 						<input class="form-control input-lg" ng-model="orgs.selectedOrg.name">	
@@ -19,10 +19,16 @@
 					<!-- <div class="col-xs-2">
 						<span class="glyphicon glyphicon-chevron-down"></span>
 					</div> -->
-				</div>
-				<sp/>
-				<div class="row">
-					<spectrum-colorpicker ng-model="orgs.selectedOrg.color" format="'hex'"></spectrum-colorpicker>
+					<div class="col-xs-2">
+						Color:
+						<sp/>
+						<spectrum-colorpicker 
+							ng-model="orgs.selectedOrg.color" 
+							format="'hex'"
+							options="colorPickerOptions"
+						>
+						</spectrum-colorpicker>
+					</div>
 				</div>
 				<sp/>
 				<div class="row">
