fixed save on org name change

--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -16,6 +16,7 @@
 						<sp/>
 						<input 
 							ng-model="orgs.selectedOrg.name"
+							ng-change="orgs.pushOrgState(orgs.selectedOrg)"
 							ng-style-NOT="{color: orgs.selectedOrg.color}"
 							class="form-control input-lg" 
 						/>
