commented plan for rollout on portfolio view

--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -55,6 +55,17 @@
 					</div>
 					<div class="col-xs-8">
 						<sp/>
+						<!-- coming soon: 
+							can enter percentage or monthly dollar or yearly dollar amount, 
+								and the others will update. 
+									one func per field-updated, 
+										rolling the values from this field into the other.
+							dollars used instead of 'portion' for y vals.
+							NOW:
+								"undesignated giving budget" and "surplus giving over budget" are displayed on portfolio view.
+									LATER: option to show 'undesignated' slice (gray)... is a receipient.
+									we're literally creating an org
+						-->
 						<div class="btn-group">
 							<button class="decrease btn btn-sm btn-warning"
 								
