--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -56,7 +56,9 @@
 					<div class="col-xs-8">
 						<sp/>
 						<!-- coming soon: 
-							can enter percentage or monthly dollar or yearly dollar amount, 
+							leave "portion" totally behind. instead:
+
+							can enter `percentage` or `monthly` dollar or `yearly` dollar amount, 
 								and the others will update. 
 									one func per field-updated, 
 										rolling the values from this field into the other.
@@ -109,6 +111,11 @@
 								number:0 
 							}} 
 							%
+							<input
+								ng-model="orgs.selectedOrg.percentage"
+								ng-change="orgs.applyChangedPercentage(orgs.selectedOrg)"
+								class="form-control"
+							/>
 						</output></div>
 					</div>
 					<div class="row">
@@ -122,6 +129,11 @@
 								| 
 								number:2 
 							}}
+							<input
+								ng-model="orgs.selectedOrg.monthly"
+								ng-change="orgs.applyChangedMonthly(orgs.selectedOrg)"
+								class="form-control"
+							/>
 					</output></div>
 					</div>					
 					<div class="row">
@@ -134,6 +146,11 @@
 								| 
 								number:2 
 							}}
+							<input
+								ng-model="orgs.selectedOrg.yearly"
+								ng-change="orgs.applyChangedYearly(orgs.selectedOrg)"
+								class="form-control"
+							/>
 						</output></div>
 					</div>
 				</div>				
