--- a/app/styles/_custom.scss
+++ b/app/styles/_custom.scss
@@ -1,3 +1,8 @@
+sp {
+	height:10px;
+	display:block;
+}
+
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
