--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -10,8 +10,11 @@
 	<div class="panel panel-default">
 		<div class="panel-body">	
 			<div id="org-editor" ng-if="orgs.selectedOrg">
+				
+
+
 				<div class="row">
-					<div class="col-xs-10">
+					<div class="col-xs-9">
 						Organization:
 						<sp/>
 						<input 
@@ -25,7 +28,7 @@
 					<!-- <div class="col-xs-2">
 						<span class="glyphicon glyphicon-chevron-down"></span>
 					</div> -->
-					<div class="col-xs-2">
+					<div class="col-xs-3">
 						Color:
 						<sp/>
 						<spectrum-colorpicker 
@@ -38,6 +41,10 @@
 				</div>
 				<sp/>
 				
+
+
+
+
 				<div ng-if=" 'portion' == orgs.givingBasis ">
 
 					<div class="row">
@@ -58,19 +65,6 @@
 						</div>
 						<div class="col-xs-8">
 							<sp/>
-							<!-- coming soon: 
-								leave "portion" totally behind. instead:
-
-								can enter `percentage` or `monthly` dollar or `yearly` dollar amount, 
-									and the others will update. 
-										one func per field-updated, 
-											rolling the values from this field into the other.
-								dollars used instead of 'portion' for y vals.
-								NOW:
-									"undesignated giving budget" and "surplus giving over budget" are displayed on portfolio view.
-										LATER: option to show 'undesignated' slice (gray)... is a receipient.
-										we're literally creating an org
-							-->
 							<div class="btn-group">
 								<button class="decrease btn btn-sm btn-warning"
 									
@@ -152,9 +146,12 @@
 
 
 				<div id="org-fixed-giving" ng-if="true"><!-- ng-if=" 'orgGiving' == orgs.givingBasis " -->
-					<hr>
+					<hr/>
+					<label>Giving:</label>
+					<!-- <hr/> -->
+					<sp/>
 					<div class="row">
-						<div class="col-xs-4">% of total Giving:</div>
+						<div class="col-xs-4">% of total:</div>
 						<div class="col-xs-5">
 							<div class="input-group">
 								<input
@@ -170,9 +167,10 @@
 					        <label class="btn btn-sm btn-default" ng-model="orgs.selectedOrg.basis" btn-radio="'percentage'">{{ 'percentage' == orgs.selectedOrg.basis ? "fixed" : "fix" }}</label>
 					    </div>
 					</div>
-					<hr>
+					<!-- <hr/> -->
+					<sp/>
 					<div class="row">
-						<div class="col-xs-4">Monthly Giving:</div>
+						<div class="col-xs-4">Monthly:</div>
 						<div class="col-xs-5">
 							<div class="input-group">
 								<div class="input-group-addon">$</div>
@@ -188,9 +186,10 @@
 					        <label class="btn btn-sm btn-default" ng-model="orgs.selectedOrg.basis" btn-radio="'amount'">{{ 'amount' == orgs.selectedOrg.basis ? "fixed" : "fix" }}</label>
 						</div>
 					</div>					
-					<hr>
+					<!-- <hr/> -->
+					<sp/>
 					<div class="row">
-						<div class="col-xs-4">Yearly Giving:</div>
+						<div class="col-xs-4">Yearly:</div>
 						<div class="col-xs-5">
 							<div class="input-group">
 								<div class="input-group-addon">$</div>
