--- a/app/styles/_colorpicker.scss
+++ b/app/styles/_colorpicker.scss
@@ -80,4 +80,5 @@
 }
 .sp-preview-inner {
     border-radius: 3px; // one less than border-radius of .form-control
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 2px inset;
 }
